--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h2>I'm a web developer</h2>
     <hr>
     <h2><a href="./public/movie-ranking.html">Movie Ranking Project</a></h2>
-    <img src="./assets/movie-ranking.png" alt="movie-ranking Project" height="200" />
+    <img src="./assets/Movie-ranking.png" alt="movie-ranking Project" height="200" />
     <h2><a href="./public/birthday-invite.html" >Birthday Invite project</a></h2>
-    <img src="./assets/birthday-invite.png" alt="Birthday Invite Project" height="200" />
+    <img src="./assets/Birthday-invite.png" alt="Birthday Invite Project" height="200" />
     <hr>
     <h3><a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a></h3>
 </body>
